--- a/index.html
+++ b/index.html
@@ -1,63 +1,255 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> ارتیمیس| ARTEMIS</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="./index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>فروشگاه اینترنتی فرش آرتیمیس</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./index.css">
 </head>
-
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="sabt.html">ورود/ثبت نام</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">صفحه اصلی</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">درباره ما </a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            ارتباط با ما 
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+  <header class="site-header">
+    <div class="brand">
+      <span class="brand-mark">A</span>
+      <div class="brand-info">
+        <strong>فرش آرتیمیس</strong>
+        <small>تجربه اصالت ایرانی</small>
+      </div>
     </div>
-  </div>
-</nav>
-   </nav>
-    
+    <nav class="main-nav">
+      <a href="#hero">خانه</a>
+      <a href="#collection">مجموعه‌ها</a>
+      <a href="#services">خدمات</a>
+      <a href="#order">سفارش اختصاصی</a>
+      <a href="#contact">تماس</a>
+    </nav>
+    <div class="header-cta">
+      <a href="sabt.html"><button class="ghost-btn">ورود / ثبت‌نام</button></a>
+      <button class="primary-btn">ثبت سفارش</button>
+    </div>
+  </header>
 
-   <img  src="mobile.png" alt="" class="motb" width="400" height="200">
-        <img src="logo-color.png" alt="logo" class="iun"> 
-        <img src="box_2.png" alt="" class="irt">
-        <img src="magnifing_glass.png" alt="" class="tup">
-        <img src="box_1.png" alt="" class="tuo">
-        <img src="type.png" alt="" class="sms">
-<p class="tut">با طراحی سایت و اپلیکیشن اندروید و IOS کسب و کار خود را گسترش <br>دهید. فقط کافیست با کارشناسان ما تماس بگیرید و یا از طریق سایت<br> سفارش خود را ثبت کنید.
-</p>
-<button class="num1">شماره:09162160490</button>
-<button class="num2">09057899861:شماره</button>
+  <main>
+    <section id="hero" class="hero">
+      <div class="hero-text">
+        <p class="eyebrow">ارسال رایگان برای سفارش‌های بالای ۵ میلیون تومان</p>
+        <h1>فرش اصیل دستباف و مدرن برای خانه‌ای متفاوت</h1>
+        <p class="subtitle">بیش از ۲۰۰ طرح منحصر‌به‌فرد با گارانتی اصالت کالا، ارسال سریع و امکان بازدید حضوری.</p>
+        <div class="hero-actions">
+          <button class="primary-btn">مشاهده محصولات</button>
+          <button class="ghost-btn">رزرو مشاوره رایگان</button>
+        </div>
+        <ul class="hero-stats">
+          <li>
+            <strong>۴۰+</strong>
+            <span>سال تجربه</span>
+          </li>
+          <li>
+            <strong>۳۵۰۰+</strong>
+            <span>سفارش موفق</span>
+          </li>
+          <li>
+            <strong>۱۰۰%</strong>
+            <span>گارانتی اصالت</span>
+          </li>
+        </ul>
+      </div>
+      <div class="hero-media">
+        <img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=900&q=80" alt="فضای نشیمن با فرش دستباف">
+        <div class="media-card">
+          <p>طراحی سفارشی برای متراژ دلخواه شما</p>
+          <span>تحویل ۴۵ روزه</span>
+        </div>
+      </div>
+    </section>
+
+    <section class="feature-grid">
+      <article>
+        <h3>ارسال و نصب رایگان</h3>
+        <p>کلیه سفارش‌ها در تهران و کرج با تیم نصب تخصصی رایگان انجام می‌شود.</p>
+      </article>
+      <article>
+        <h3>ضمانت برگشت ۷ روزه</h3>
+        <p>اگر فرش با دکور شما هماهنگ نبود، بدون هزینه بازپس گرفته می‌شود.</p>
+      </article>
+      <article>
+        <h3>مشاوره طراحی</h3>
+        <p>کارشناسان ما با بازدید آنلاین یا حضوری بهترین گزینه را پیشنهاد می‌کنند.</p>
+      </article>
+      <article>
+        <h3>کیفیت ممتاز</h3>
+        <p>الیاف طبیعی، رنگ ثابت و بافت استاندارد با شناسنامه اصالت.</p>
+      </article>
+    </section>
+
+    <section id="collection" class="collection">
+      <div class="section-header">
+        <div>
+          <p class="eyebrow">جدیدترین‌ها</p>
+          <h2>مجموعه‌های منتخب</h2>
+        </div>
+        <button class="ghost-btn">مشاهده همه</button>
+      </div>
+      <div class="card-grid">
+        <article class="product-card">
+          <img src="https://images.unsplash.com/photo-1616594039964-2953a648c63d?auto=format&fit=crop&w=800&q=80" alt="فرش دستباف تبریز">
+          <div>
+            <h3>کلکسیون دستباف تبریز</h3>
+            <p>بافت رج‌شمار ۶۰ با طرح‌های اصیل شاه عباسی.</p>
+            <div class="card-meta">
+              <span>از ۱۸ میلیون تومان</span>
+              <button class="link-btn">مشاهده</button>
+            </div>
+          </div>
+        </article>
+        <article class="product-card">
+          <img src="https://images.unsplash.com/photo-1455778977538-0436a066bb96?auto=format&fit=crop&w=800&q=80" alt="فرش مدرن مینیمال">
+          <div>
+            <h3>مجموعه مدرن مینیمال</h3>
+            <p>طرح‌های هندسی مناسب دکوراسیون معاصر.</p>
+            <div class="card-meta">
+              <span>از ۹ میلیون تومان</span>
+              <button class="link-btn">مشاهده</button>
+            </div>
+          </div>
+        </article>
+        <article class="product-card">
+          <img src="https://images.unsplash.com/photo-1455778977538-0436a066bb96?auto=format&fit=crop&w=800&q=80" alt="گلیم دستباف">
+          <div>
+            <h3>گلیم و جاجیم</h3>
+            <p>الیاف طبیعی مناسب فضاهای روستیک و بوهم.</p>
+            <div class="card-meta">
+              <span>از ۴ میلیون تومان</span>
+              <button class="link-btn">مشاهده</button>
+            </div>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <section class="story">
+      <div class="story-text">
+        <p class="eyebrow">چرا آرتیمیس؟</p>
+        <h2>تلفیق هنر دست‌بافان و طراحی روز دنیا</h2>
+        <p>ما با شبکه‌ای از بافندگان خبره از تبریز، قم و نائین همکاری می‌کنیم تا طرح‌های اختصاصی شما را با بهترین متریال تولید کنیم. هر فرش دارای شناسنامه اصالت، کد رج شمار و ضمانت مکتوب است.</p>
+        <ul>
+          <li>بازدید حضوری در شوروم تهران</li>
+          <li>امکان پرداخت اقساطی تا ۶ ماه</li>
+          <li>پک مراقبت و خدمات شست‌وشوی دوره‌ای</li>
+        </ul>
+      </div>
+      <div class="story-media">
+        <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80" alt="کارگاه بافت فرش">
+      </div>
+    </section>
+
+    <section id="services" class="services">
+      <p class="eyebrow">خدمات ویژه</p>
+      <h2>هرآنچه برای انتخاب فرش لازم دارید</h2>
+      <div class="service-grid">
+        <article>
+          <h3>سنجش ابعاد در محل</h3>
+          <p>کارشناس ابعاد و نور محیط را اندازه‌گیری و بهترین ترکیب رنگی را پیشنهاد می‌دهد.</p>
+        </article>
+        <article>
+          <h3>مقایسه واقعیت افزوده</h3>
+          <p>با اپلیکیشن اختصاصی ما فرش را قبل از خرید در فضای خود ببینید.</p>
+        </article>
+        <article>
+          <h3>سفارش لوگوی اختصاصی</h3>
+          <p>طرح خانوادگی یا برند شما با الیاف و رنگ دلخواه بافته می‌شود.</p>
+        </article>
+      </div>
+    </section>
+
+    <section class="testimonials">
+      <p class="eyebrow">نظرات مشتریان</p>
+      <h2>بیش از ۹۸٪ رضایت</h2>
+      <div class="testimonial-grid">
+        <article>
+          <p>«کیفیت بافت فوق‌العاده و پشتیبانی بسیار حرفه‌ای بود. فرش سفارشی ما دقیقاً طبق دکوراسیون طراحی شد.»</p>
+          <span>الهام کاظمی، زعفرانیه</span>
+        </article>
+        <article>
+          <p>«ارسال سریع و بسته‌بندی عالی. امکان مرجوعی بدون دردسر باعث شد با خیال راحت خرید کنیم.»</p>
+          <span>فرهاد میرجلیلی، اصفهان</span>
+        </article>
+      </div>
+    </section>
+
+    <section id="order" class="custom-order">
+      <div>
+        <p class="eyebrow">سفارش اختصاصی</p>
+        <h2>فرش موردنظر خود را طراحی کنید</h2>
+        <p>فرم زیر را پر کنید تا طراح ما ظرف ۲۴ ساعت با شما تماس بگیرد.</p>
+        <ul>
+          <li>انتخاب پالت رنگی</li>
+          <li>تعیین ابعاد دقیق</li>
+          <li>ارسال طرح اولیه سه‌بعدی</li>
+        </ul>
+      </div>
+      <form class="order-form">
+        <label>
+          نام و نام خانوادگی
+          <input type="text" placeholder="مثلاً: نیلوفر رحیمی">
+        </label>
+        <label>
+          شماره تماس
+          <input type="tel" placeholder="0912 000 0000">
+        </label>
+        <label>
+          نوع فرش دلخواه
+          <select>
+            <option>دستباف کلاسیک</option>
+            <option>مدرن</option>
+            <option>گلیم / گبه</option>
+            <option>سفارش ویژه</option>
+          </select>
+        </label>
+        <label>
+          توضیحات تکمیلی
+          <textarea rows="3" placeholder="ابعاد، رنگ، سبک دکوراسیون..."></textarea>
+        </label>
+        <button type="submit" class="primary-btn">ثبت درخواست</button>
+      </form>
+    </section>
+
+    <section class="newsletter">
+      <div>
+        <p class="eyebrow">باشگاه مشتریان</p>
+        <h2>کدهای تخفیف و آموزش نگهداری</h2>
+        <p>با عضویت در خبرنامه هر ماه راهنمای نگهداری و تخفیف ویژه دریافت کنید.</p>
+      </div>
+      <form class="newsletter-form">
+        <input type="email" placeholder="ایمیل خود را وارد کنید">
+        <button class="primary-btn">عضویت</button>
+      </form>
+    </section>
+  </main>
+
+  <footer id="contact" class="site-footer">
+    <div>
+      <h3>شوروم مرکزی</h3>
+      <p>تهران، خیابان ولیعصر، بالاتر از پارک ملت، پلاک ۲۳۱</p>
+      <p>ساعت کاری: همه‌روزه ۹ تا ۲۰</p>
+    </div>
+    <div>
+      <h3>راه‌های ارتباطی</h3>
+      <p>تلفن: ۰۲۱-۲۲۳۳۴۴۵۵</p>
+      <p>واتساپ: ۰۹۱۲-۱۲۳۴۵۶۷</p>
+      <p>ایمیل: hello@artemiscarpet.ir</p>
+    </div>
+    <div>
+      <h3>ما را دنبال کنید</h3>
+      <p class="socials">
+        <a href="#">اینستاگرام</a>
+        <a href="#">تلگرام</a>
+        <a href="#">لینکدین</a>
+      </p>
+      <small>© ۱۴۰۴ فرش آرتیمیس - تمامی حقوق محفوظ است.</small>
+    </div>
+  </footer>
 </body>
-
 </html>
