--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="#contact">تماس</a>
     </nav>
     <div class="header-cta">
-      <a href="sabt.html"><button class="ghost-btn">ورود / ثبت‌نام</button></a>
+      <a href="signup.html"><button class="ghost-btn">ورود / ثبت‌نام</button></a>
       <button class="primary-btn">ثبت سفارش</button>
     </div>
   </header>
