--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
           <p class="eyebrow">ثبت حساب جدید</p>
           <h2>دو مرحله تا عضویت</h2>
         </div>
-        <a href="sabt.html">قبلاً ثبت‌نام کرده‌اید؟ ورود</a>
+        <a href="./login.html">قبلاً ثبت‌نام کرده‌اید؟ ورود</a>
       </header>
       <form class="signup-form">
         <label>
