--- a/index.html
+++ b/index.html
@@ -129,6 +129,35 @@
       </div>
     </section>
 
+    <section class="gallery">
+      <div class="section-header">
+        <div>
+          <p class="eyebrow">گالری فرش</p>
+          <h2>چند نمونه از فضاهای اجرا شده</h2>
+        </div>
+      </div>
+      <div class="gallery-grid">
+        <figure>
+          <img src="https://images.unsplash.com/photo-1618220179428-22790b461013?auto=format&fit=crop&w=900&q=80" alt="فرش مدرن در اتاق نشیمن روشن">
+        </figure>
+        <figure>
+          <img src="https://images.unsplash.com/photo-1507081323647-4d250478b919?auto=format&fit=crop&w=900&q=80" alt="فرش سنتی در پذیرایی کلاسیک">
+        </figure>
+        <figure>
+          <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?auto=format&fit=crop&w=900&q=80" alt="دفتر کار با فرش طرح مدرن">
+        </figure>
+        <figure>
+          <img src="https://images.unsplash.com/photo-1522202195461-41a5cbaefa7e?auto=format&fit=crop&w=900&q=80" alt="کنسول و فرش گلیم در راهرو">
+        </figure>
+        <figure>
+          <img src="https://images.unsplash.com/photo-1519710164239-da123dc03ef4?auto=format&fit=crop&w=900&q=80" alt="اتاق خواب با فرش نرم و روشن">
+        </figure>
+        <figure>
+          <img src="https://images.unsplash.com/photo-1460627390041-532a28402358?auto=format&fit=crop&w=900&q=80" alt="فرش رنگی در فضای مدرن">
+        </figure>
+      </div>
+    </section>
+
     <section class="story">
       <div class="story-text">
         <p class="eyebrow">چرا آرتیمیس؟</p>
