--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>فروشگاه اینترنتی فرش آرتیمیس</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="http://cdn.font-store.ir/yekan.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./index.css">
 </head>
@@ -138,22 +139,22 @@
       </div>
       <div class="gallery-grid">
         <figure>
-          <img src="https://images.unsplash.com/photo-1618220179428-22790b461013?auto=format&fit=crop&w=900&q=80" alt="فرش مدرن در اتاق نشیمن روشن">
+          <img src="./red-khanmohammadi-handwoven-carpet-code131-1.jpg" alt="نمونه فرش ماشینی امیرکبیر ۱">
         </figure>
         <figure>
-          <img src="https://images.unsplash.com/photo-1507081323647-4d250478b919?auto=format&fit=crop&w=900&q=80" alt="فرش سنتی در پذیرایی کلاسیک">
+          <img src="./green-khan-mohammadi-handwoven-carpet-code136-1.jpg" alt="نمونه فرش ماشینی امیرکبیر ۲">
         </figure>
         <figure>
-          <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?auto=format&fit=crop&w=900&q=80" alt="دفتر کار با فرش طرح مدرن">
+          <img src="./300610-green-01-800x600.webp" alt="نمونه فرش ماشینی امیرکبیر ۳">
         </figure>
         <figure>
-          <img src="https://images.unsplash.com/photo-1522202195461-41a5cbaefa7e?auto=format&fit=crop&w=900&q=80" alt="کنسول و فرش گلیم در راهرو">
+          <img src="./im3.jpeg" alt="نمونه فرش ماشینی امیرکبیر ۴">
         </figure>
         <figure>
-          <img src="https://images.unsplash.com/photo-1519710164239-da123dc03ef4?auto=format&fit=crop&w=900&q=80" alt="اتاق خواب با فرش نرم و روشن">
+          <img src="./im4.webp" alt="نمونه فرش ماشینی امیرکبیر ۵">
         </figure>
         <figure>
-          <img src="https://images.unsplash.com/photo-1460627390041-532a28402358?auto=format&fit=crop&w=900&q=80" alt="فرش رنگی در فضای مدرن">
+          <img src="./persian-carpet.webp" alt="نمونه فرش ماشینی امیرکبیر ۶">
         </figure>
       </div>
     </section>
